Fixed poor visibility of read-only text

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -1,7 +1,7 @@
 $default-spacing: 8px;
 
-$lm-disabled-text-color: hsl(0 0% 67%);
-$dm-disabled-text-color: hsl(0 0% 39%);
+$lm-disabled-text-color: hsl(0 0% 37%);
+$dm-disabled-text-color: hsl(0 0% 53%);
 
 $lm-inactive-toggle-text-color: hsl(0 0% 27%);
 $dm-inactive-toggle-text-color: hsl(0 0% 53%);
